--- a/src/main.scss
+++ b/src/main.scss
@@ -1,17 +1,17 @@
 :root {
-  --background-1: #1d2021;
-  --background-2: #161919;
+  --background-1: #3B4252;
+  --background-2: #2E3440;
 
-  --foreground-1: #f9f5d7;
-  --foreground-2: #838383;
-  --foreground-3: #a8a8a8;
+  --foreground-1: #ECEFF4;
+  --foreground-2: #E5E9F0;
+  --foreground-3: #ECEFF4;
 
-  --highlight-color: #d79921;
-  --neutral-color: #928374;
-  --danger-color: #cc241d;
-  --success-color: #458588;
-  --warning-color: #d65d0e;
-  --border-color: #050606;
+  --highlight-color: #88C0D0;
+  --neutral-color: #D8DEE9;
+  --danger-color: #BF616A;
+  --success-color: #8FBCBB;
+  --warning-color: #D08770;
+  --border-color: #434C5E;
 
   /* Footer */
   --footer-bar-border-top-color: 0;
