Fixing missed out files

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,6 @@
 :root {
-  --background-1: #3B4252;
-  --background-2: #2E3440;
+  --background-1: #2E3440;
+  --background-2: #3B4252;
 
   --foreground-1: #ECEFF4;
   --foreground-2: #E5E9F0;
@@ -9,7 +9,7 @@
   --highlight-color: #88C0D0;
   --neutral-color: #D8DEE9;
   --danger-color: #BF616A;
-  --success-color: #8FBCBB;
+  --success-color: #5E81AC;
   --warning-color: #D08770;
   --border-color: #434C5E;
 
