--- a/src/main.scss
+++ b/src/main.scss
@@ -11,7 +11,7 @@
   --danger-color: #BF616A;
   --success-color: #5E81AC;
   --warning-color: #D08770;
-  --border-color: #434C5E;
+  --border-color: #2E3440;
 
   /* Footer */
   --footer-bar-border-top-color: 0;
